refactor(health): intellij complaining about trivial stuff again